# marinade-sdk

./: .gitignore  Anchor.toml  Cargo.toml
libs/anchor-adapter/: Cargo.toml
libs/anchor-adapter/src/: lib.rs
libs/marinade-anchor-sdk/: Cargo.toml
libs/marinade-anchor-sdk/src/: lib.rs
libs/marinade-sdk/: Cargo.toml
libs/marinade-sdk-macro/: Cargo.toml
libs/marinade-sdk-macro/src/: lib.rs
libs/marinade-sdk-macro/tests/: derive.rs
libs/marinade-sdk/src/: checks.rs  error.rs  lib.rs  stake_system.rs  state.rs  ticket_account.rs
libs/marinade-sdk/src/instructions/: add_liquidity.rs  add_validator.rs  change_authority.rs  claim.rs  config_lp.rs  config_marinade.rs  config_validator_system.rs  deactivate_stake.rs  deposit.rs  deposit_stake_account.rs  emergency_unstake.rs  initialize.rs  liquid_unstake.rs  merge_stakes.rs  mod.rs  order_unstake.rs  partial_unstake.rs  remove_liquidity.rs  remove_validator.rs  set_validator_score.rs  stake_reserve.rs
libs/marinade-sdk/src/state/: delayed_unstake_ticket.rs  fee.rs  liq_pool.rs  list.rs  marinade.rs  mod.rs  stake_system.rs  validator_system.rs
libs/micro-anchor/: Cargo.toml
libs/micro-anchor/src/: lib.rs
programs/example/: Cargo.toml
programs/example/src/: lib.rs
programs/marinade-sdk/: Cargo.toml
programs/marinade-sdk/src/: checks.rs  error.rs  fee.rs  lib.rs  liq_pool.rs  list.rs  located.rs  state.rs  validator_system.rs
tests/: marinade-sdk.ts
