[package]
name = "marinade-sdk"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
name = "marinade_sdk"

[features]

[profile.release]
overflow-checks = true

[dependencies]
borsh = "0.9.3"
micro-anchor = { path = "../../libs/micro-anchor" }
solana-program = "~1.10.29"
spl-token = { version = "~3.3.0", features = ["no-entrypoint"] }
